--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "cordova-android": "^8.1.0",
     "cordova-plugin-camera": "^4.1.0",
     "cordova-plugin-vibration": "^3.1.1",
+    "emailjs-com": "^2.6.4",
     "firebase": "^7.14.5",
     "jquery": "^3.5.1",
     "phonegap-plugin-barcodescanner": "8.1.0",
